# crawlerScript

./: .gitignore  README.md  courseCrawler.ts  mergeExcelFiles.ts  package.json
.trae/documents/: 使用 Tauri 构建爬取 Excel 的 Windows 桌面应用.md
desktop-app/: README.md  index.html  package.json
desktop-app/src/: App.tsx
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: main.rs
src/: courseCrawler.ts  tempCodeRunnerFile.ts  爬虫.ts
src/tauri/: index.ts  logParser.ts  pathUtils.ts  processRunner.ts  status.ts  types.ts  爬虫.tauri.ts
src/utils/: formatTime.ts
接口&响应/: respond.json  其他接口.md  接口1.md  接口2.md  需求.md
重跑/: courseCrawler copy.ts  courseCrawler.ts
