[package]
name = "excel_crawler"
version = "0.1.0"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
umya-spreadsheet = "0.8"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
anyhow = "1.0.100"
futures = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
